[gd_scene load_steps=7 format=3 uid="uid://dpadkvsejcq3p"]

[ext_resource type="Script" uid="uid://hi2bj2jxyh57" path="res://scenes/pages/search/search.gd" id="1_tsotc"]
[ext_resource type="PackedScene" uid="uid://be88hfg8whswb" path="res://scenes/pages/search/board-game-info-search/board_game_info_search.tscn" id="2_hx6fw"]
[ext_resource type="PackedScene" uid="uid://dbngkkrv78khk" path="res://scenes/components/search-bar/search_bar.tscn" id="3_y5qre"]
[ext_resource type="PackedScene" uid="uid://52xwphfqp44l" path="res://scenes/components/selection-scroll-container/selection_scroll_container.tscn" id="5_0oi54"]
[ext_resource type="Texture2D" uid="uid://cymc4nh2bmowt" path="res://asset/icon/search-grey.svg" id="5_bv7de"]
[ext_resource type="Theme" uid="uid://cbq3hxgptt55t" path="res://resource/theme/main_theme.tres" id="6_pm7ld"]

[node name="Search" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tsotc")
board_game_info_search_scene = ExtResource("2_hx6fw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SearchBar" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("3_y5qre")]
unique_name_in_owner = true
layout_mode = 2
placeholder_value = "Search for a game"

[node name="SelectionScrollContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_0oi54")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="EmptyState" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/EmptyState"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("5_bv7de")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/EmptyState"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EmptyState/MarginContainer"]
layout_mode = 2
theme = ExtResource("6_pm7ld")
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 48
text = "Search for a game to add to your collection."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="search_requested" from="MarginContainer/VBoxContainer/VBoxContainer/SearchBar" to="." method="_on_search_requested"]
